# cbor4ii

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_de.rs  bench_ser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: de.rs  decode.rs
hongg-fuzz/: Cargo.toml
hongg-fuzz/src/: main.rs
src/: core.rs  error.rs  lib.rs  serde.rs  util.rs
src/core/: dec.rs  enc.rs  error.rs  raw_value.rs  types.rs  utils.rs
src/serde/: de.rs  error.rs  ser.rs
tests/: decode.rs  serde.rs  serde_cbor.rs
