[package]
name = "cbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { version = "1", default-features = false, optional = true }
bstr = { version = "0.2", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }

[features]
use_std = [ "serde/std" ]
half-f16 = [ "half" ]
serde1 = [ "serde" ]

[dev-dependencies]
anyhow = "1"
data-encoding = "2"
serde_cbor = "0.11"
