[package]
name = "cbor4ii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_std = [ "serde/std", "use_alloc" ]
use_alloc = [ "serde/alloc" ]
half-f16 = [ "half" ]
serde1 = [ "serde", "use_alloc" ]
serde-value = [ "serde1", "serde/derive" ]

[dependencies]
half = { version = "1", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11"
data-encoding = "2"
serde_cbor = "0.11"
ciborium = "0.1"
criterion = "0.3"

[[bench]]
name = "ser"
path = "benches/bench_ser.rs"
harness = false
